<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="faqs">FAQs</string>
    <string name="home">Home</string>
    <string name="log_out">Log out</string>
    <string name="rate_us">Rate us</string>
    <string name="settings">Settings</string>
    <string name="your_adds">Your Adds</string>
    <string name="about_us">About us</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>